fix: fail fast - check valid of provider during start up instead of run time - modify test cases for fail fast fix