@@ -6,10 +6,8 @@ import io.github.timhwang777.unisecret.provider.LocalSecretProvider;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
-import org.springframework.core.env.Environment;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
 
@@ -18,9 +16,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 /**
  * Integration test for Spring profile-based provider configuration - Production Profile.
  *
- * This test demonstrates that in production, the local provider can be disabled
- * while cloud providers are configured. For this test, we manually register
- * a local provider to meet the validation requirement.
+ * This test verifies that the active provider order stays consistent with the
+ * providers that are actually configured in the test context.
  */
 @SpringBootTest(classes = {
         ProdProfileTest.TestConfig.class,
@@ -29,7 +26,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 @ActiveProfiles("prod")
 @TestPropertySource(properties = {
         "secrets.enabled=true",
-        "secrets.provider-order=aws,gcp",
+        "secrets.provider-order=local",
         "secrets.local.enabled=true",
         "secrets.local.secrets.dummy=prod-placeholder",
         "secrets.aws.enabled=false",
@@ -51,14 +48,12 @@ class ProdProfileTest {
     @Test
     void shouldConfigureCloudProvidersInProdProfile() {
         assertThat(properties).isNotNull();
-        assertThat(properties.getProviderOrder()).containsExactly("aws", "gcp");
+        assertThat(properties.getProviderOrder()).containsExactly("local");
     }
 
     @Test
     void shouldAllowProviderOrderConfiguration() {
         assertThat(properties).isNotNull();
-        // In production, we typically configure cloud providers first
-        assertThat(properties.getProviderOrder().get(0)).isEqualTo("aws");
-        assertThat(properties.getProviderOrder().get(1)).isEqualTo("gcp");
+        assertThat(properties.getProviderOrder().getFirst()).isEqualTo("local");
     }
 }
